--- a/index.html
+++ b/index.html
@@ -10,8 +10,26 @@
     <link rel="stylesheet" href="./img/stylesheet.css">
 </head>
 <body>
-  
-  <i class="fa-brands fa-facebook"></i><p><b>welcome here</b></p>
+  <!-- nav section -->
+  <nav>
+ <a href="./home.html">Home</a>
+ <a href="./about.html">About</a>
+ <a href="./contact.html">Contact</a>
+ <a href="./us.html">Us</a>
+
+  </nav>
+
+  <!-- enf of nav section -->
+
+  <!-- this is a header section -->
+ <header>
+  <h1>welcome home</h1>
+  <h2>thank you</h2>
+  <h3>poa</h3>
+ </header>
+ <!-- end of header section -->
+ <!-- body section -->
+ <article>
   <p>
     welcome to East Africa of Satified Studie where you  can activate your career and welcome all save date ,time and future </p>
   </p>
@@ -21,6 +39,10 @@
   <audio width="300" height="300" controls>  
     <source src="./audio/Orchestre-Les-Wanyika-Tamasha-Records-Sina-Makosa.mp3">
   </audio>
+ </article>
+
+  <!-- enfd of body -->
+<!-- form section -->
   <form>
 <fieldset>
   <legend>personalia:</legend>
@@ -35,8 +57,18 @@
   <input type="submit"  value="submit">
 </fieldset>
  </form>
- 
-  <p>copyright &copyright;luka all right reserve to luka</p>
+ <!-- end of form section -->
+
+ <!-- FOOTER SECTION -->
+ <footer>
+  <p>copyright &copy;luka All Right Reserve to luka</p>
+
+  <p>follow us on below social media</p>
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-twitter"></i>
+  <i class="fa-brands fa-instagram"></i>
+</footer>
+  <!-- END OF FOOTER -->
     
 
 </body>
